# build_angle

./: CMakeLists.txt  config.cmake
.circleci/: config.yml
patches/: 0001-check-d3d11-texture-bind-flags-for-eglstream.patch  0002-win-fix-build-error-if-target-win8.patch  0003-fix-unrecognized-SAL-for-clang-cl.patch  0003-win-fix-build-without-d3d9.patch  0004-fix-unrecognized-SAL-for-clang-cl.patch  0005-clang-cl-std-atomic-is-not-trivally-constructible.patch
